# SCU-CPP

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  auto_test_recognizer.py  command_line_recognizer.py  docker-compose.yaml  download_mnist.py  entrypoint.sh  handwritten_digit_recognizer.py  optimization_summary.py  simple_digit_recognizer.py  train_knn_model.py  ultra_simple_recognizer.py
data/: model.weights  model.weights.example
mnist_recognizer/: CMakeLists.txt  README.md  build_console.bat  build_run.bat  build_run_simple.bat  compile.bat  console_recognizer.cpp  digit_recognizer.cpp  digit_recognizer.pro  digits_model.xml  opencv_recognizer.cpp  windows_recognizer.cpp
src/: main.cpp  mnist_loader.hpp  neural_net.cpp  neural_net.hpp  utils.hpp
static/: index.html
